<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="button1_text_search">Поиск</string>
    <string name="button3_text_settings">Настройки</string>
    <string name="button4_text_mediateka">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="message_share" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="message_error_intent">Не нашлось подходящего приложения!</string>
    <string name="my_email" translatable="false">novakovskayasa@yandex.ru</string>
    <string name="message_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer_address" translatable="false">https://yandex.ru/legal/practicum_offer/"</string>
    <string name="nothing_found">Ничего не нашлось!</string>
    <string name="something_went_wrong">Проблемы со связью \n \n  Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="track_image_description">Обложка для трека</string>
    <string name="track_time_millis_text">Длительность</string>
    <string name="collection_name_text">Альбом</string>
    <string name="release_date_text">Год</string>
    <string name="primary_genre_name_text">Жанр</string>
    <string name="country_text">Страна</string>
    <string name="network_err">Произошла сетевая ошибка</string>
    <string name="search_err">Ошибка поиска</string>
    <string name="my_message" translatable="false">Пока посмотреть на работу плейера можно, зайдя через экран поиска"</string>
    <string name="time_00_00">00:00</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="title">Название*</string>
    <string name="definition">Описание</string>
    <string name="create">Создать</string>
    <string name="filename">list_image</string>
    <string name="extention">.jpg</string>
    <string name="directory">playlistmaker</string>
    <string name="title_dialog">Завершить создание плейлиста?</string>
    <string name="message_dialog">Все несохраненные данные будут потеряны</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="complete_dialog">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="db_error">Ошибка при получении списка треков для плейлиста</string>
    <string name="title_delete_track_dialog">Удалить трек</string>
    <string name="message_delete_track_dialog">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="del_dialog">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="track_list_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="title_delete_playlist_dialog">Удалить плейлист</string>
    <string name="message_delete_playlist_dialog">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="null_tracks">0 треков</string>
    <string name="null_minutes">0 минут</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks_in_playlist">Плейлист пуст</string>

</resources>