<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/small_padding"    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="28dp">

        <ImageView
            android:id="@+id/button_settings_back"
            style="@style/ImageViewLayoutSettingsWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"/>
        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_12"
            android:text="@string/button3_text_settings"
            android:textColor="@color/text_button_icon">
        </TextView>
    </LinearLayout>
    <FrameLayout style="@style/FrameLayoutSettingsWindow">
        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/dark_theme">
        </TextView>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_gravity="right|center_vertical"/>
    </FrameLayout>
    <FrameLayout style="@style/FrameLayoutSettingsWindow">
        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/share_the_app">
        </TextView>
        <ImageView
            style="@style/ImageViewLayoutSettingsWindow"
            android:src="@drawable/share"/>
    </FrameLayout>
    <FrameLayout style="@style/FrameLayoutSettingsWindow">
        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/write_to_support">
        </TextView>
        <ImageView
            style="@style/ImageViewLayoutSettingsWindow"
            android:src="@drawable/support"/>
    </FrameLayout>
    <FrameLayout style="@style/FrameLayoutSettingsWindow">
        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/user_agreement">
        </TextView>
        <ImageView
            style="@style/ImageViewLayoutSettingsWindow"
            android:src="@drawable/allow_forward"/>
      </FrameLayout>
</LinearLayout>