<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_settings_window"
    android:orientation="vertical"
    android:padding="@dimen/small_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48"
        android:layout_marginBottom="@dimen/margin_28"
        android:gravity="center_vertical">

     <!--   <ImageView
            android:id="@+id/button_settings_back"
            style="@style/ImageViewLayoutSettingsWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back" /> -->

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_12"
            android:text="@string/button3_text_settings"
            android:textColor="@color/text_button_settings_window"></TextView>
    </LinearLayout>

    <FrameLayout style="@style/FrameLayoutSettingsWindow">

        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/dark_theme"></TextView>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/selector_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:checked="false" />
        <!--style="@style/MySwitchStyle"-->
    </FrameLayout>

    <FrameLayout style="@style/FrameLayoutSettingsWindow">

        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/share_the_app"></TextView>

        <ImageView
            android:id="@+id/button_settings_share"
            style="@style/ImageViewLayoutSettingsWindow"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout style="@style/FrameLayoutSettingsWindow">

        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/write_to_support"></TextView>

        <ImageView
            android:id="@+id/button_settings_support"
            style="@style/ImageViewLayoutSettingsWindow"
            android:layout_height="wrap_content"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout style="@style/FrameLayoutSettingsWindow">

        <TextView
            style="@style/TextViewLayoutSettingsWindow"
            android:text="@string/user_agreement"></TextView>

        <ImageView
            android:id="@+id/button_settings_allow_forward"
            style="@style/ImageViewLayoutSettingsWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>
</LinearLayout>