<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_background"
    android:padding="@dimen/medium_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/margin_6"
        android:layout_marginBottom="@dimen/margin_32"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_8"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button1_text_search"
        android:textColor="@color/text_button_icon"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/text_button_icon"
        android:foreground="?attr/selectableItemBackground">
    </Button>
    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_8"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button2_text_media"
        android:textColor="@color/text_button_icon"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/text_button_icon"
        android:foreground="?attr/selectableItemBackground">
    </Button>
    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/button3_text_settings"
        android:textColor="@color/text_button_icon"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/medium_padding"
        app:iconTint="@color/text_button_icon"
        android:foreground="?attr/selectableItemBackground">
    </Button>
</LinearLayout>
